# MotionForge

./: .gitignore  README.md  architecture.md  main.py  planmotion.md  prompt-animator-onefile.spec  prompt-animator.spec  pyproject.toml  requirements.txt
benchmarks/: windows-x64.json
docs/: velo-integration.md
engines/: engine_2d.py
examples/: elliptical_orbit.scene.json  red_ball_ramp.scene.json
llm/: scene_generator.py
llm/providers/: anthropic_provider.py  base.py  ollama_provider.py
render/: manim_renderer.py
schema/: scene_spec.py
scripts/: benchmark.py  build.ps1
src/motionforge/: __init__.py  __main__.py  cache.py  cli.py  constants.py  core.py  errors.py  models.py  paths.py
src/motionforge/api/: __init__.py  server.py
src/motionforge/compiler/: __init__.py  scene_compiler.py  templates.py
src/motionforge/jobs/: __init__.py  manager.py  store.py
src/motionforge/physics/: __init__.py  simulator.py
src/motionforge/providers/: __init__.py  anthropic.py  base.py  factory.py  ollama.py
src/motionforge/render/: __init__.py  manim_renderer.py
src/motionforge/timeline/: __init__.py  converter.py
tests/: test_api_jobs.py  test_compiler_templates.py  test_export_integration.py  test_models.py  test_physics.py  test_timeline_and_cache.py
timeline/: converter.py
